--- a/firebase.json
+++ b/firebase.json
@@ -14,7 +14,11 @@
       {
         "source": "**",
         "destination": "/index.html"
-      }
+			},
+      {
+        "source": "/admin/**",
+        "function": "adminPortal"
+			}			
     ]
   },
   "storage": {
