--- a/package.json
+++ b/package.json
@@ -10,11 +10,10 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.20.0",
     "buefy": "^0.9.3",
     "core-js": "^3.6.5",
     "firebase": "^7.20.0",
-    "firebase-tools": "^8.10.0",
-    "firebaseui": "^4.6.1",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
     "vuefire": "^2.2.4",
